tests/anon_struct_literal_type_fields_bad.hop
// Verifies expression-context struct literals require field initializers.
fn main() {
	x := struct { x int }
	_ = x
}
